Fixed clear search button alignment

--- a/app/assets/stylesheets/new_common/filters.css.scss
+++ b/app/assets/stylesheets/new_common/filters.css.scss
@@ -129,8 +129,8 @@
   position:absolute;
   top:23px;
   right:0;
-  width:28px;
-  height:28px;
+  width:29px;
+  height:29px;
   border-radius: 30px;
   border:1px solid #CCC;
   color:#CCC;
